deployment-irsa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecs-dotnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecs-dotnet-app
  template:
    metadata:
      labels:
        app: ecs-dotnet-app
    spec:
      serviceAccountName: dotnet-app-sa
      containers:
      - name: ecs-dotnet-app
        image: 814129119746.dkr.ecr.ap-south-1.amazonaws.com/ecs-dotnet-app:v2
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
