clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: ecs-dotnet-app
  ports:
  - port: 80
    targetPort: 5000
