dotnet-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-api-svc
  namespace: default
spec:
  selector:
    app: dotnet-api
  ports:
  - port: 80
    targetPort: 8080
  type: LoadBalancer
