service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecs-dotnet-service
  labels:
    app: ecs-dotnet-app
spec:
  type: LoadBalancer
  selector:
    app: ecs-dotnet-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
